@@ -16,4 +16,4 @@ ng serve`
 Restful service that provides data to clients
 
 ### Running
-`mvn compile package install && java --add-modules java.xml.bind -jar target/rest-db-1.0-SNAPSHOT.jar`
+`mvn compile package install spring-boot:run`
